# GrOptics-PSCT

./: CMakeLists.txt  NewSCT.C  PsfSegSpot.root  photonLocation.root  photonhistory_Tel1.root  photonhistory_Tel2.root  photonhistory_Tel3.root  photonhistory_Tel4.root
Config/: arrayConfig.cfg  opticsSimulation.pilot
ROBAST-telescope_factory/: CMakeLists.txt
ROBAST-telescope_factory/include/: ADefinition.h  LinkDef.h
ROBAST-telescope_factory/src/: ADefinition.cxx
ROBAST-telescope_factory/tutorials/: HESS1_C_ACLiC_dict.cxx  HESS1_C_ACLiC_dict.h  HESS1_C_ACLiC_linkdef.h  HESS1_C_ACLiC_map.in  HESS1_C_ACLiC_map.out
Test/: comparePhotonLocationTrees.C
src/: GSegSCTelescope.cpp
