cmake_minimum_required(VERSION 3.6)
project(ROBAST_telescope_factory)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        include/bernlohr/fileopen.h
        include/bernlohr/initial.h
        include/bernlohr/io_basic.h
        include/bernlohr/mc_tel.h
        include/bernlohr/straux.h
        include/bernlohr/warning.h
        include/ABorderSurfaceCondition.h
        include/ACauchyFormula.h
        include/ACorsikaIACTEventHeader.h
        include/ACorsikaIACTFile.h
        include/ACorsikaIACTRunHeader.h
        include/ADefinition.h
        include/AFocalSurface.h
        include/AGeoAsphericDisk.h
        include/AGeoBezierPcon.h
        include/AGeoBezierPgon.h
        include/AGeoUtil.h
        include/AGeoWinstonCone2D.h
        include/AGeoWinstonConePoly.h
        include/AGlassCatalog.h
        include/ALens.h
        include/AMirror.h
        include/AObscuration.h
        include/AOpticalComponent.h
        include/AOpticsManager.h
        include/ARay.h
        include/ARayArray.h
        include/ARayShooter.h
        include/ARefractiveIndex.h
        include/ASchottFormula.h
        include/ASellmeierFormula.h
        include/ATelescope.h
        include/ATelescopeFactory.h
        include/LinkDef.h
        misc/footer.html
        misc/header.html
        src/bernlohr/eventio.c
        src/bernlohr/fileopen.c
        src/bernlohr/io_simtel.c
        src/bernlohr/straux.c
        src/bernlohr/warning.c
        src/ABorderSurfaceCondition.cxx
        src/ACauchyFormula.cxx
        src/ACorsikaIACTEventHeader.cxx
        src/ACorsikaIACTFile.cxx
        src/ACorsikaIACTRunHeader.cxx
        src/ADefinition.cxx
        src/AFocalSurface.cxx
        src/AGeoAsphericDisk.cxx
        src/AGeoBezierPcon.cxx
        src/AGeoBezierPgon.cxx
        src/AGeoUtil.cxx
        src/AGeoWinstonCone2D.cxx
        src/AGeoWinstonConePoly.cxx
        src/AGlassCatalog.cxx
        src/ALens.cxx
        src/AMirror.cxx
        src/AObscuration.cxx
        src/AOpticalComponent.cxx
        src/AOpticsManager.cxx
        src/ARay.cxx
        src/ARayArray.cxx
        src/ARayShooter.cxx
        src/ARefractiveIndex.cxx
        src/ASchottFormula.cxx
        src/ASellmeierFormula.cxx
        src/ATelescope.cxx
        src/ATelescopeFactory.cxx
        tutorials/AbsLengthTest.C
        tutorials/AshraOptics.C
        tutorials/CORSIKA.C
        tutorials/DaviesCotton.C
        tutorials/EdmundOptics.C
        tutorials/HESS1.C
        tutorials/HESS1_C_ACLiC_dict.cxx
        tutorials/HESS1_C_ACLiC_dict.h
        tutorials/HESS1_C_ACLiC_linkdef.h
        tutorials/HexOkumuraCone.C
        tutorials/HexWinstonCone.C
        tutorials/multithread.C
        tutorials/Optimize.C
        tutorials/SchmidtCassegrain.C
        tutorials/SchwarzschildCouder.C
        tutorials/SimpleParabolicTelescope.C
        Makefile
        mkhtml.sh
        README
        README.md)

add_executable(ROBAST_telescope_factory ${SOURCE_FILES})